dataloader is added #1

--- a/config.yml
+++ b/config.yml
@@ -1,18 +1,18 @@
-# path:
-#   files_path: ../../research/files/
-#   raw_path: ../../data/raw/
-#   processed_path: ../../data/processed/
-
-
 path:
-  files_path: ./research/files/
-  raw_path: ./data/raw/
-  processed_path: ./data/processed/
-  netG_XtoY_path: ./checkpoints/train_models_netG_XtoY/
-  netG_YtoX_path: ./checkpoints/train_models_netG_YtoX/
-  best_model_path: ./checkpoints/best_model/
-  train_results: ./outputs/train_results/
-  test_result: ./outputs/test_result/
-  batch_results_path: ./results/batch_results/
-  single_results_path: ./results/single_results/
-  metrics_path: ./metrics/
+  files_path: ../../research/files/
+  raw_path: ../../data/raw/
+  processed_path: ../../data/processed/
+
+
+# path:
+#   files_path: ./research/files/
+#   raw_path: ./data/raw/
+#   processed_path: ./data/processed/
+#   netG_XtoY_path: ./checkpoints/train_models_netG_XtoY/
+#   netG_YtoX_path: ./checkpoints/train_models_netG_YtoX/
+#   best_model_path: ./checkpoints/best_model/
+#   train_results: ./outputs/train_results/
+#   test_result: ./outputs/test_result/
+#   batch_results_path: ./results/batch_results/
+#   single_results_path: ./results/single_results/
+#   metrics_path: ./metrics/
